--- a/dashboard.html
+++ b/dashboard.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AscendXBot - Home</title>
+  <title>Dashboard - AscendXBot</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Welcome to AscendXBot</h1>
-  <a href="login.html">Login</a> | <a href="dashboard.html">Dashboard</a>
-  <script src="script.js"></script>
+  <h2>Dashboard Overview</h2>
+  <p>Here you will see Direct Income, Matching Income, ROI, and Team Tree.</p>
 </body>
 </html>
