--- a/login.html
+++ b/login.html
@@ -1,19 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login - AscendXBot</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>AscendXBot Login</title>
+  <style>
+    body {
+      font-family: Arial;
+      background: #111;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+    .login-box {
+      background: #1c1c1c;
+      padding: 20px;
+      border-radius: 10px;
+      width: 300px;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 5px;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      background: gold;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+    .error {
+      color: red;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
-  <h2>Login</h2>
-  <form>
-    <label>User ID:</label><br/>
-    <input type="text" placeholder="Enter User ID"/><br/>
-    <label>Password:</label><br/>
-    <input type="password" placeholder="Enter Password"/><br/>
-    <button type="submit">Login</button>
-  </form>
+  <div class="login-box">
+    <h2>AscendXBot Login</h2>
+    <input type="text" id="userid" placeholder="User ID" />
+    <input type="password" id="password" placeholder="Password" />
+    <button onclick="login()">Login</button>
+    <div class="error" id="error-msg"></div>
+  </div>
+
+  <script>
+    function login() {
+      const id = document.getElementById("userid").value;
+      const pass = document.getElementById("password").value;
+      if (id === "ASC123456" && pass === "demo@123") {
+        window.location.href = "dashboard.html";
+      } else {
+        document.getElementById("error-msg").innerText = "Invalid ID or Password";
+      }
+    }
+  </script>
 </body>
 </html>
