--- a/dashboard.html
+++ b/dashboard.html
@@ -3,11 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dashboard - AscendXBot</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>AscendXBot Dashboard</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+    }
+    header {
+      background-color: #000;
+      color: #FFD700;
+      padding: 20px;
+      text-align: center;
+    }
+    .content {
+      padding: 20px;
+    }
+    .card {
+      background: white;
+      margin-bottom: 20px;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
+  </style>
 </head>
 <body>
-  <h2>Dashboard Overview</h2>
-  <p>Here you will see Direct Income, Matching Income, ROI, and Team Tree.</p>
+  <header>
+    <h1>Welcome to AscendXBot</h1>
+  </header>
+  <div class="content">
+    <div class="card">
+      <h2>Your Earnings</h2>
+      <p>Total Income: $0.00</p>
+      <p>ROI Plan: Not Activated</p>
+    </div>
+
+    <div class="card">
+      <h2>Team Details</h2>
+      <p>Directs: 0</p>
+      <p>Total Team: 0</p>
+    </div>
+  </div>
 </body>
 </html>
